# star-platinum

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  docker-compose.yml
entity/: Cargo.toml
entity/src/entities/: mod.rs  prelude.rs  sea_orm_active_enums.rs  stand.rs
migration/src/: lib.rs  m20250904_093433_stands.rs
sea_orm_pro_assets/: README.md
src/: main.rs
src/db/: mod.rs
src/graphql/: mod.rs  mutation.rs  query.rs
src/graphql/subscription/: mod.rs  subscription.rs  subscriptor.rs
src/routes/: graphiql.rs  mod.rs
src/routes/api/: auth.rs  mod.rs  panel.rs
src/routes/api/graphql/: graphiql.rs
