[package]
name = "star-platinum"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["migration", "entity"]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
dotenv = "0.15.0"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio"] }
serde = "1.0.217"
anyhow = "1.0.95"
async-graphql = "7.0.13"
async-graphql-axum = "7.0.13"
tokio-stream = "0.1.17"
futures-util = "0.3.31"
async-stream = "0.3.6"
futures-timer = "3.0.3"
slab = "0.4.9"
once_cell = "1.20.2"
futures-channel = "0.3.31"
sea-orm = { version = "1.1.0", features = [
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "macros",
] }
async-std = "1.13.2"
sea-orm-pro = "0.1.0"
tower-http = { version = "0.6.6", features = ["fs"] }
tower-cookies = "0.11.0"
seaography = { version = "1.1", features = [
  "with-decimal",
  "with-chrono",
  "with-uuid",
  "field-snake-case",
] }
