[package]
name = "entity"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.0" }
seaography = { version = "1.1", features = ["with-decimal", "with-chrono", "with-uuid", "field-snake-case"] }
async-graphql = "7.0.13"
strum = "0.26"
strum_macros = "0.26"
serde = "1.0.217"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio"] }
